# GenerativeAIDevelopmentSeminarDocumentation

./: .gitignore  CLAUDE.md  LICENSE  README.md
section01-introduction/: README.md  main.py  pyproject.toml
section02-jsonplaceholder/: README.md  app.py  notebook-colab.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
section02-jsonplaceholder/solution/: app.py  exercise_2.py
section02-jsonplaceholder/test/: test_app.py
section03-basic-gemini-api/: .env.example  README.md  main.py  notebook.ipynb  pyproject.toml
section04-practical-gemini-api/: README.md  notebook.ipynb
