[project]
name = "section01-jsonplaceholder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "google-genai>=1.11.0",
]

[tool.uv.workspace]
members = ["section01-introduction"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
